# surf-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
examples/: wikipedia_search.py
src/surf_agent/: __init__.py  actions.py  agent.py  browser.py  cli.py  config.py  dom.py
src/surf_agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py
tests/: test_action_parsing.py
